--- a/conf/config.json
+++ b/conf/config.json
@@ -2,18 +2,17 @@
 	"server" : {
 		"port" : 81,
 		"base_res_path" : "res",
-		"public_salt" : "a855931d31feb334981d61e37a46a032"
+		"public_salt" : "123"
 	},
 	"wechat" : {
-		"appid" : "wxf4314d88d5eda41a",
-		"secret" : "303d08608960884bcc4ee394da577c3d"
+		"appid" : "",
+		"secret" : ""
 	},
 	"mysql" : {
-		"host" : "115.28.241.66",
 		"host" : "localhost",
 		"user" : "root",
 		"password" : "123456",
-		"database" : "happykeke",
+		"database" : "keke_stage",
 		"port" : 3306
 	}
 }
